2017-12-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Matthew Martin: 42113: Completion/BSD/Command/_bsd_pkg,
	Completion/BSD/Type/_fbsd_architectures,
	Completion/BSD/Type/_nbsd_architectures,
	Completion/BSD/Type/_obsd_architectures: Remove FreeBSD use of
	pkg_* tools and add BSD architecture utilities.

2017-12-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 42110: Src/parse.c, Test/A04redirect.ztst: fix redirection in
	between variable assignments at start of line.

2017-12-01  Peter Stephenson  <p.stephenson@samsung.com>

	* dana: 42065: Test/B10getopts.ztst: new getopts tests.

	* dana: 42063: Src/builtin.c: getopts errors now report "+" if
	appropriate for option.

2017-11-24  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 42031 + 42048: Doc/Zsh/cond.yo, Doc/Zsh/options.yo, README,
	Src/cond.c, Test/C02cond.ztst: Make [[ -o invalidoption ]]
	a normal(ish) false value, rather than a syntax error.

2017-11-20  Peter Stephenson  <p.stephenson@samsung.com>

	* Dima Kogan: 42040: Src/glob.c: buffer for glob qualifiers
	loses stat information in corner case.

	* Evan Underscore / pws: 42037: Completion/bashcompinit: recent
	change caused wrong word to be used for COMP_POINT.

2017-11-13  Oliver Kiddle  <opk@zsh.org>

	* 42019: Completion/Unix/Command/_git: update options to 2.15
	and improve format completion for git tag and for-each-ref

	* gitlab #1: Completion/Unix/Command/_sqlite: update options
	for sqlite 3.21.0

	* github #18: Malcolm Ramsay: Completion/Redhat/Command/_dnf:
	Explicitly use system python so the dnf module can be found

	* github #19: Chris Bracken: Doc/Zsh/options.yo: Fix minor typo
	in INC_APPEND_HISTORY documentation

2017-11-11  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Martijn: 42004: Doc/Zsh/builtins.yo: fix parentheses.

2017-11-04  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Linux/Command/_sshfs: Make the -o option
	repeatable, accept "--".

2017-11-04  Oliver Kiddle  <opk@zsh.org>
